--- a/user/style.css
+++ b/user/style.css
@@ -1,4 +1,4 @@
-body {
+/*body {
   font: 20px Montserrat, sans-serif;
   line-height: 1.8;
   color: #f5f6f7;
@@ -47,3 +47,7 @@ a {
 a:hover {
   text-decoration: none;
 }
+
+li.dropdown {
+  list-style-type: none;
+}*/
